field accodion update

--- a/templates/more-fields-accordion-field-formatter.html.twig
+++ b/templates/more-fields-accordion-field-formatter.html.twig
@@ -1,4 +1,4 @@
-<div class="field-box mb-3 accordion">
+<div class="field-box mb-3">
   <div class="field-meta btn btn-block p-0 border-0" data-toggle="collapse" data-target="#{{ item.id }}" aria-expanded="true" aria-controls="{{ item.id }}">
     {% if item.icon %}
       <div class="field-icon text-light">
