--- a/templates/more-fields-accordion-field-formatter.html.twig
+++ b/templates/more-fields-accordion-field-formatter.html.twig
@@ -1,21 +1,27 @@
-<div class="field-box mb-3">
-  <div class="field-meta btn btn-block p-0 border-0" data-toggle="collapse" data-target="#{{ item.id }}" aria-expanded="true" aria-controls="{{ item.id }}">
-    {% if item.icon %}
-      <div class="field-icon text-light">
-        {{ item.icon|raw }}
-      </div>
-    {% endif %}
-    {% if item.title %}
-      <div class="field-title font-weight-bold">
-        {{ item.title }}
-      </div>
-    {% endif %}
-  </div>
-  {% if item.description %}
-    <div id="{{ item.id }}" class="collapse">
-      <div class="field-description h6 text-black-50">
-        {{ item.description|raw }}
-      </div>
-    {% endif %}
-  </div>
+{% if items %}
+<div {{ attribute }}>
+	{% for item in items %}
+        <div {{ attribute_box }}>
+          <div {{ item.attribute_title }}>
+            {% if item.icon %}
+              <div class="field-icon text-light">
+                {{ item.icon }}
+              </div>
+            {% endif %}
+            {% if item.title %}
+              <div class="field-title font-weight-bold">
+                {{ item.title }}
+              </div>
+            {% endif %}
+          </div>
+          {% if item.description %}
+            <div {{ item.attribute_content }}>
+              <div class="field-description h6 text-black-50">
+                {{ item.description }}
+              </div>
+            {% endif %}
+          </div>
+        </div>
+    {% endfor %}    
 </div>
+{% endif %}
