--- a/templates/more-fields-bef-radios.html.twig
+++ b/templates/more-fields-bef-radios.html.twig
@@ -15,6 +15,7 @@
     'form-radios',
     'more_fields_bef_radios',
     'd-flex',
+    'flex-wrap',
     is_nested ? 'bef-nested',
     display_inline ? 'form--inline'
   ]
