--- a/templates/more-fields-accordion-field-formatter.html.twig
+++ b/templates/more-fields-accordion-field-formatter.html.twig
@@ -16,7 +16,7 @@
           </div>
           {% if item.description %}
             <div {{ item.attribute_content }}>
-              <div class="field-description h6 text-black-50">
+              <div class="field-description">
                 {{ item.description }}
               </div>
             {% endif %}
