--- a/templates/more-field-file-image-video.html.twig
+++ b/templates/more-field-file-image-video.html.twig
@@ -1,12 +1,9 @@
 <div class="commerce-swiper-container d-flex">
-	<div
-		class="commerce-swiper swiper col-9">
+	<div class="commerce-swiper swiper col-9">
 		<!-- Additional required wrapper -->
-		<div
-			class="swiper-wrapper">
+		<div class="swiper-wrapper">
 			<!-- Slides -->
 			{% for item in element.items %}
-
 				<div class="swiper-slide">
 					{{item}}
 				</div>
@@ -19,11 +16,9 @@
 	<div
 		class="commerce-swiper-thumb mt-3">
 		<!-- Additional required wrapper -->
-		<div
-			class="swiper-wrapper">
+		<div class="swiper-wrapper">
 			<!-- Slides -->
 			{% for item in element.items %}
-
 				<div class="swiper-slide">
 					{{item}}
 				</div>
