--- a/templates/more-field-gallery-overlay.html.twig
+++ b/templates/more-field-gallery-overlay.html.twig
@@ -1,23 +1,18 @@
-<section id="gallery" class="drupal-gallery-overlay gallery-overlay-section">
-	<div class="container">
-		<div id="image-gallery" class="gallery-overlay-section-gallery">
-			<div class="row">
-
-				{% for element in elements %}
-					<div {{image_attributes.image_wrappers_class}}>
-						<div class="go-img-wrapper img-wrapper">
-							<a href="{{element.url}}">{{element.image}}</a>
-							<div class="go-img-overlay img-overlay">
-								<i {{image_attributes.icon_class}} aria-hidden="true"></i>
-							</div>
+<div {{field_attribute.addClass([" drupal-gallery-overlay","gallery-overlay-section"])}}>
+	<div id="image-gallery" {{gallery_attribute.addClass("gallery-overlay-section-gallery")}}>
+		<div class="row">
+			{% for element in elements %}
+				<div {{image_attributes.image_wrappers_class}}>
+					<div class="go-img-wrapper img-wrapper">
+						<a href="{{element.url}}">{{element.image}}</a>
+						<div class="go-img-overlay img-overlay">
+							<i {{image_attributes.icon_class}} aria-hidden="true"></i>
 						</div>
 					</div>
-				{% endfor %}
-			</div>
-			<!-- End row -->
+				</div>
+			{% endfor %}
 		</div>
-		<!-- End image gallery -->
-		<!-- End image gallery -->
+		<!-- End row -->
 	</div>
-	<!-- End container -->
-</section>
+	<!-- End image gallery -->
+</div>
