--- a/templates/more-field-gallery-overlay.html.twig
+++ b/templates/more-field-gallery-overlay.html.twig
@@ -1,5 +1,5 @@
 <div {{field_attribute.addClass([" drupal-gallery-overlay","gallery-overlay-section"])}}>
-	<div id="image-gallery" {{gallery_attribute.addClass("gallery-overlay-section-gallery")}}>
+	<div {{gallery_attribute.addClass("gallery-overlay-section-gallery")}}>
 		<div class="row">
 			{% for element in elements %}
 				<div {{image_attributes.image_wrappers_class}}>
